tests/NormalTests/paczka2/big_fuzzy/19699507.err
Error in line 18: 0MhuGwmu S437 183,0
Error in line 23: neSjO1 S773 20,5
Error in line 24: 0MhuGwmu A794 8,2
Error in line 37: 0MhuGwmu S348 75,0
Error in line 41: neSjO1 A794 24,9
Error in line 19: SwGFJyhbRD A794 2,9
Error in line 54: mBtQ8f S348 7,4
Error in line 62: 8BzS S773 72,1
Error in line 64: mBtQ8f A794 92,9
Error in line 67: 0MhuGwmu S348 1,3
Error in line 69: mBtQ8f S437 24,9
Error in line 73: 0MhuGwmu S437 12,6
Error in line 75: SwGFJyhbRD S437 1,9
Error in line 85: SwGFJyhbRD A794 6,6
Error in line 86: A794 S348 67,9
Error in line 95: SwGFJyhbRD S437 67,9
Error in line 82: neSjO1 S437 23,4
Error in line 106: 0MhuGwmu A794 97,5
Error in line 110: 0MhuGwmu S773 72,9
Error in line 107: mBtQ8f S437 98,0
Error in line 111: 8BzS S348 6,1
Error in line 114: 8BzS S773 28,6
Error in line 131: A794 S348 74,5
Error in line 147: TpgMy4qX1ym A794 40,39
Error in line 144: A794 S773 30,3
Error in line 149: mBtQ8f S348 84,5
Error in line 159: neSjO1 S773 131,96
Error in line 158: mBtQ8f A794 24,2
Error in line 157: neSjO1 S773 59,8
Error in line 175: TpgMy4qX1ym S773 18,5
Error in line 176: TpgMy4qX1ym A794 90,1
Error in line 167: 0MhuGwmu A794 37,9
Error in line 170: A794 A794 24,8
Error in line 179: TpgMy4qX1ym S348 51,1
Error in line 190: A794 A794 79,0
Error in line 203: A794 S437 40,5
Error in line 209: A794 A794 9,5
Error in line 219: TpgMy4qX1ym S437 98,0
Error in line 221: TpgMy4qX1ym S773 15,5
Error in line 220: 0MhuGwmu S773 5,1
Error in line 228: neSjO1 A794 72,2
Error in line 223: 0MhuGwmu S437 2,3
